# LibAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9a9afb132aea_init.py
data/: .~lock.subList_112.xlsx#  subList_112.xlsx  subList_113.xlsx  subList_114.xlsx
src/library_agent/: __init__.py  config.py  graph.py  main.py  state.py
src/library_agent/agents/: crawler.py  discoverer.py  librarian.py  parser.py  recommender.py  validator.py
src/library_agent/db/: models.py  session.py
src/library_agent/integrations/: alma.py  google_books.py  loc.py  nccu_syllabus.py
src/library_agent/prompts/: discoverer_prompts.py  parser_prompts.py  recommender_prompts.py
